fixed: [#32240] Collada import when nodes share geometry but not material