source/blender/collada/MaterialExporter.h
@@ -34,11 +34,12 @@
 #include "COLLADASWLibraryMaterials.h"
 #include "COLLADASWStreamWriter.h"
 
-#include "BKE_material.h"
-
-#include "DNA_material_types.h"
-#include "DNA_object_types.h"
-#include "DNA_scene_types.h"
+extern "C" {
+	#include "BKE_material.h"
+	#include "DNA_material_types.h"
+	#include "DNA_object_types.h"
+	#include "DNA_scene_types.h"
+}
 
 #include "GeometryExporter.h"
 #include "collada_internal.h"
